[package]
name = "html-renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fantoccini = "0.19.3"
headless_chrome = "1.0.9"
image = "0.24.8"
serde_json = "1.0.113"
tokio = {version = "1.36.0", features = ["full"] }
