[package]
name = "html-renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
config = "0.14.0"
fantoccini = "0.19.3"
image = "0.24.8"
serde_json = "1.0.113"
serenity = "0.12.0"
tokio = {version = "1.36.0", features = ["full"] }
urlencoding = "2.1.3"
